# github-cn-nav

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  _translate_new.py  auto_update.py  browse.sh  classify_module.py  classify_module.py (新建)  compute_surge.py  deploy.py  manifest.json  phase3_enhanced.py  phase3_enhanced.py (简化版，保留作为独立运行入口)  pyproject.toml  surge_top100.json  translate_batch_0_done.json  translate_batch_1_done.json  translate_batch_2_done.json  translate_batch_3_done.json  update.sh  utils.py  分类统计.json
.github/workflows/: update.yml
data/: manifest.json  projects.json  ready.txt  surge_top100.json
data/snapshots/: 2026-06-01.json  2026-06-02.json  2026-06-03.json  2026-06-04.json  2026-06-05.json  2026-06-06.json  2026-06-07.json  2026-06-08.json  2026-06-09.json  2026-06-10.json  2026-06-11.json  2026-06-12.json  2026-06-13.json
deploy/: README.txt  index.html  projects.json  serve.bat  serve.sh  standalone.html  surge_top100.json
src/: auto_update.py  compute_surge.py  compute_surge_v2.py  deploy.py  phase3_enhanced.py  utils.py
