[project]
name = "github-chinese-nav"
version = "3.0.0"
description = "GitHub 5000+ Star 项目中文导航站"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "urllib3>=2.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
